--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
 <style type="text/css">
 svg {
     border: solid 1px black;
+    transform: rotateY(180deg);
+    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+    -moz-transform:rotateY(180deg); /* Firefox */
 }
 </style>
 
