--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@ svg {
     -moz-transform:    rotateY(180deg); /* Firefox */
 }
 
+img.logo { margin-left: 50px; margin-top: 10px; }
+
 label { padding: 5px; }
 </style>
 
