--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@ svg {
     -moz-transform:    rotateY(180deg); /* Firefox */
 }
 
+.floor {
+    background-image:  url(img/dance_floor.jpg);
+    background-size:   cover;
+}
+
 img.logo { margin-left: 50px; margin-top: 10px; }
 
 label { padding: 5px; }
